styles.css
/* Reset styles */
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

/* Global styles */
body {
  font-family: Arial, sans-serif;
  font-size: 16px;
  line-height: 1.5;
  color: #ffd0ec;
  background-color: #81689d;
}

a {
  text-decoration: none;
}

/* Header styles */
header {
  background-color: #1f2544;
  padding: 20px;
  text-align: center;
  margin: 20px;
  border-radius: 12px;
}

/* Search container styles */
.search-container {
  display: flex;
  justify-content: center;
  margin: 40px 0;
}

#location-input {
  padding: 10px;
  border: 2px solid #ffd0ec;
  border-radius: 12px;
  color: #ffd0ec;
  background-color: #ffffff00;
  font-size: 16px;
  width: 300px;
  margin-right: 10px;
}

#search-btn {
  background-color: #474f7a;
  border: none;
  color: #ffd0ec;

  padding: 10px 20px;
  border-radius: 12px;
  font-size: 16px;
  cursor: pointer;
}

/* Weather info styles */
.weather-info {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin: 20px;
}

.current-weather {
  background-color: #474f7a;
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 20px;
  border-radius: 12px;
  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
  margin-bottom: 20px;
  width: 500px;
}

.current-weather.hidden,
.forecast.hidden {
  display: none;
}
.current-weather h2 {
  font-size: 36px;
  text-align: center;

  margin-bottom: 10px;
}
.weather-content {
  margin-left: 10%;
}
.current-weather p {
  text-align: right;
  margin-bottom: 5px;
}

.forecast {
  background-color: #1f2544;
  padding: 20px;
  border-radius: 12px;
  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
  text-align: center;
}

.forecast h2 {
  font-size: 24px;
  margin-bottom: 20px;
}

.forecast-days {
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
}

.forecast-days > div {
  background-color: #474f7a;
  padding: 10px;
  border-radius: 12px;
  margin: 10px;
  width: 150px;
}

/* Footer styles */
footer {
  background-color: #1f2544;
  color: #ffd0ec;
  padding: 10px;
  text-align: center;
  display: none;
  bottom: 0;
}

